--- a/css/style.css
+++ b/css/style.css
@@ -665,23 +665,29 @@ a{
 }
 .box5 .box5-2{
     background-color: palevioletred;
+    
 }
 .box5 .box5-2 .box5-3{
 	width: 1100px;
 	margin-top: 30px;
 	margin-bottom:30px ;
 	float: left;
+	
+	overflow: hidden;
 
 }
 .box5 .box5-2 .box5-3 ul{
 	margin: 0px;
 	padding: 0px;
+	width: 4400px;
+	position: relative;
+
 
 }
 .box5 .box5-2 .box5-3 ul li{
 	list-style: none;
 	float: left;
-	width: 33.3%;
+    width: 366.66px;
 	position: relative;
 }
 .box5 .box5-2 .box5-3 ul li img{
@@ -693,6 +699,7 @@ a{
 .box5 .box5-2 .box5-3 ul li span{
 	display: block;
 	width: 115px;
+	color: black;
 	text-align: center;
 }
 .box5 .box5-2 .box5-3 .texts{
@@ -811,4 +818,44 @@ a{
 .box7 ul li .wen p{
 	padding: 0px;
 	margin: 0px;
+}
+.box8{
+	height: 300px;
+	margin-top: 40px;
+	background-color: peachpuff;
+}
+.box8 .box8-1{
+	height: 52px;
+	line-height: 52px;
+	background-color: palevioletred;
+}
+.box8 h2{
+	margin: 0px;
+	padding: 0px;
+	color: black;
+}
+.box8 .tem{
+	background-color: peru;
+	margin-top: 10px;
+   overflow: hidden;
+}
+.box8 .tem ul{
+	margin: 0px;
+	width: 4000px;
+	
+}
+.box8 .tem li{
+	margin: 0px;
+	padding: 0px;
+	list-style: none;
+	float: left;
+	width:170px;
+	height: 80px;
+	margin-left: ;
+	border: solid 1px gainsboro;
+	
+}
+.box8 .tem li img{
+	width: 170px;
+	height: 80px;
 }
